--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,4 +2,201 @@
 @import 'fonts';
 @import 'vars';
 @import 'global';
+
+.header{
+  &__top{
+    padding: 14px 0;
+    background-color: $dark-800;
+    color: $white;
+    @extend %opensans-700;
+     .delivery{
+       display: flex;
+       justify-content: space-between;
+       &__items{
+         display: flex;
+         justify-content: space-between;
+       }
+       &__item{
+         &:not(:last-child) {
+           margin-right: 24px;
+         }
+         &__link{
+           background-repeat: no-repeat;
+           background-size: contain;
+           transition: box-shadow 0.3s ease-out, opacity 0.3s linear, color ease-in 0.4s;
+           &--adress {
+             padding-left: 45px;
+             background-image: url('../images/icon/del-address.svg');
+             &:hover {
+               opacity: 0.7;
+             }
+             &:active {
+               color: $green-200;
+             }
+           }
+           &--tell {
+             padding-left: 45px;
+             background-image: url('../images/icon/tel.svg');
+           }
+           &--text {
+             &:focus {
+               box-shadow: 0px 0px 0px 3px $green-100;
+               border-radius: 3px;
+             }
+           }
+         }
+       }
+     }
+  }
+
+  &__content{
+    background-color: $green-900;
+    padding: 25px 0;
+    &__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .menu {
+        background-color: $white;
+        padding: 15px 51px;
+        &__list {
+          display: none;
+        }
+      }
+      .search {
+        max-width: 576px;
+        position: relative;
+
+        &__button-icon {
+          content: "";
+          position: absolute;
+          max-width: 44px;
+          height: 44px;
+          padding: 10px;
+          z-index: 50;
+          left: 20px;
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 15px;
+          left: 15px;
+          width: 20px;
+          height: 20px;
+          background-repeat: no-repeat;
+          background-size: contain;
+          background-image: url('../images/icon/search.svg');
+        }
+
+        &__input {
+          background-color: $white;
+          padding: 15px 51px;
+          box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.2);
+          border-radius: 6px 0 0 6px;
+          border: 0;
+          margin: 0;
+        }
+
+        &__button {
+          color: $white;
+          background-color: $dark-800;
+          padding: 15px 52px;
+          box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.2);
+          border-radius: 0 6px 6px 0;
+          margin: 0;
+        }
+
+      }
+      .user-nav {
+        display: flex;
+
+        &__items {
+          display: flex;
+          justify-content: space-between;
+          position: relative;
+        }
+
+        &__link {
+          position: relative;
+
+          &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+
+          &--user::before {
+            top: 0;
+            left: 0;
+
+            background-image: url('../images/icon/user.svg');
+          }
+
+          &--favorite::before {
+            top: 0;
+            left: 0;
+            background-image: url('../images/icon/favorite.svg');
+          }
+
+          &--cart::before {
+            top: 0;
+            right: 50px;
+            background-image: url('../images/icon/cart.svg');
+          }
+
+
+        }
+
+        &__num {
+          position: absolute;
+          width: 18px;
+          height: 18px;
+          border-radius: 50%;
+          background-color: $white;
+          color: $red-900;
+        }
+      }
+    }
+  }
+}
+
+.footer{
+  background-color: $dark-800;
+  color: $white;
+  &__top{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+    border-bottom: 1px solid $white;
+    
+  }
+  &__inner {
+    display: flex;
+    flex-direction: column;
+  }
+  &__inner--list {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0;
+    
+    
+  }
+  &__link {
+    width: 100px;
+    height: 100px;
+    z-index: 5;
+  }
+}
+
+
+
 @import 'media';
