--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -37,13 +37,11 @@ $white: #FFFFFF;
 }
 
 %ruda-600 {
-  font-family: 'Ruda-SemiBold',
-  sans-serif;
+  font-family: 'Ruda-SemiBold', sans-serif;
   font-weight: 600;
 }
 
 %ruda-700 {
-  font-family: 'Ruda-Bold',
-    sans-serif;
+  font-family: 'Ruda-Bold', sans-serif;
   font-weight: 700;
 }
