--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,9 @@
+html,
+body{
+  height: 100%  
+}
+  
+  
 .sr-only{
   position: absolute;
   width: 1px;
@@ -10,13 +16,60 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 body{
+  @extend %opensans-400;
   font-size: 14px;
+  line-height: 1.4;
   color: $dark-900;
+  display: flex;
+  flex-direction: column;
+  background-color: $white;  
 }
+
+.main{
+  flex-grow: 1;
+}
+
 
 .container{
   max-width: 1320px;
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.title {
+  @extend %ruda-600;
+    font-size: 32px;
+}
+
+.filter {
+  display: flex;
+  justify-content: center;      
+  @extend %opensans-700;
+  font-size: 15px;
+}  
+
+.button {
+  background-color: $green-900;
+  color: $white;
+  font-size: 18px;
+  width: 177px;
+  height: 47px;
+  padding: 12px 24px;
+  border-radius: 6px;
+  &:hover {
+    background-color: #4D810C;;
+  }
+  &:focus {
+    box-shadow: 0 0 0 4px $green-200;        
+  }
+  &:active {
+    box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: $green-900;
+    color: rgba($color: $white, $alpha: 0.5);
+  }
+} 
+
+
+  
