--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,8 +2,18 @@ html,
 body{
   height: 100%  
 }
-  
-  
+
+body{  
+  font-family: 'OpenSans';
+  font-weight: 400; 
+  font-size: 14px;
+  line-height: 1.4;
+  color: $dark-900;
+  display: flex;
+  flex-direction: column;
+  background-color: $white;  
+}
+
 .sr-only{
   position: absolute;
   width: 1px;
@@ -17,20 +27,9 @@ body{
   overflow: hidden;
 }
 
-body{
-  @extend %opensans-400;
-  font-size: 14px;
-  line-height: 1.4;
-  color: $dark-900;
-  display: flex;
-  flex-direction: column;
-  background-color: $white;  
-}
-
 .main{
   flex-grow: 1;
 }
-
 
 .container{
   max-width: 1320px;
@@ -38,32 +37,29 @@ body{
   padding: 0 15px;
 }
 
-.title {
-  @extend %ruda-600;
-    font-size: 32px;
+.title {  
+  font-family: 'Ruda';
+  font-weight: 600;
+  font-size: 32px;
 }
-
-.filter {
-  display: flex;
-  justify-content: center;      
-  @extend %opensans-700;
-  font-size: 15px;
-}  
 
 .button {
   background-color: $green-900;
   color: $white;
-  font-size: 18px;
-  width: 177px;
-  height: 47px;
+  font-size: 18px;  
   padding: 12px 24px;
   border-radius: 6px;
+  transition: box-shadow 0.4s ease-in-out,
+  background-color 0.4s linear;
+
   &:hover {
-    background-color: #4D810C;;
+    background-color: #4D810C;
   }
+
   &:focus {
     box-shadow: 0 0 0 4px $green-200;        
   }
+
   &:active {
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
     background-color: $green-900;
